[gd_scene load_steps=17 format=3 uid="uid://dmr7tdowfbkt6"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_twwiv"]
[ext_resource type="Texture2D" uid="uid://dnmv86hxm371m" path="res://art/Tile/B_Tree.png" id="2_5dwi8"]
[ext_resource type="Texture2D" uid="uid://rsq26k6ygsmt" path="res://art/Tile/B_S_R.png" id="3_s84ac"]
[ext_resource type="Texture2D" uid="uid://cescbn2jhg3f5" path="res://art/Tile/green_two.png" id="4_76ykl"]
[ext_resource type="Texture2D" uid="uid://bt4qa7snl6nar" path="res://art/Tile/T_NB.png" id="5_7xm0d"]
[ext_resource type="Texture2D" uid="uid://d1thlh812ip15" path="res://art/Tile/Tree_Two.png" id="6_fwog8"]
[ext_resource type="Script" path="res://scenes/TileMapDebugTool.gd" id="7_ifnrd"]
[ext_resource type="PackedScene" uid="uid://dsjhm1josomyh" path="res://scenes/snake.tscn" id="7_nn7cm"]
[ext_resource type="PackedScene" uid="uid://cqtaul20rn73m" path="res://scenes/coin.tscn" id="8_hd4ou"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8f8oc"]
texture = ExtResource("2_5dwi8")
texture_region_size = Vector2i(64, 32)
0:0/size_in_atlas = Vector2i(1, 3)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -16, -32, 0, 0, 16, 32, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xyjlc"]
texture = ExtResource("3_s84ac")
texture_region_size = Vector2i(64, 32)
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rshcm"]
texture = ExtResource("4_76ykl")
texture_region_size = Vector2i(64, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ti7w0"]
texture = ExtResource("5_7xm0d")
texture_region_size = Vector2i(64, 32)
0:0/size_in_atlas = Vector2i(1, 3)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -16, -32, 0, 0, 16, 32, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b8h0c"]
texture = ExtResource("6_fwog8")
texture_region_size = Vector2i(64, 32)
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -16, -32, 0, 0, 16, 32, 0)

[sub_resource type="TileSet" id="TileSet_jhh53"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(64, 32)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_rshcm")
sources/6 = SubResource("TileSetAtlasSource_b8h0c")
sources/0 = SubResource("TileSetAtlasSource_8f8oc")
sources/1 = SubResource("TileSetAtlasSource_xyjlc")
sources/3 = SubResource("TileSetAtlasSource_ti7w0")

[sub_resource type="LabelSettings" id="LabelSettings_pb8xq"]
font_size = 10

[node name="Level" type="Node2D"]
top_level = true
script = ExtResource("1_twwiv")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(351, 100)
tile_set = SubResource("TileSet_jhh53")
collision_visibility_mode = 1
format = 2
layer_0/name = "base"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(196604, 2, 0, 131068, 2, 0, 65532, 2, 0, -4, 2, 0, -3, 2, 0, -65539, 2, 0, -65538, 2, 0, -131074, 2, 0, -131073, 2, 0, -262144, 1, 0, -262143, 1, 0, -262142, 2, 0, -262141, 2, 0, -196605, 2, 0, -196604, 2, 0, -196603, 2, 0, -196602, 2, 0, -131066, 2, 0, -131065, 2, 0, -65529, 2, 0, -65528, 2, 0, 8, 2, 0, 9, 2, 0, 65545, 2, 0, 131081, 2, 0, 196617, 2, 0, 196618, 2, 0, 262154, 2, 0, 327690, 2, 0, 327689, 2, 0, 393225, 2, 0, 458761, 2, 0, 458760, 2, 0, 524296, 2, 0, 524295, 2, 0, 589831, 1, 0, 589830, 1, 0, 655365, 2, 0, 655364, 2, 0, 655363, 2, 0, 655362, 2, 0, 589826, 2, 0, 589825, 2, 0, 589824, 2, 0, 524288, 2, 0, 589823, 2, 0, 589822, 2, 0, 524286, 2, 0, 458750, 2, 0, 458749, 2, 0, 393213, 2, 0, 327677, 2, 0, 327676, 2, 0, 262140, 2, 0, -196608, 2, 0, 589829, 2, 0, 589828, 2, 0, 589827, 2, 0, 524291, 2, 0, 524290, 2, 0, 458754, 2, 0, 458753, 2, 0, 393217, 2, 0, 393216, 2, 0, 327680, 2, 0, 393215, 2, 0, 327679, 2, 0, 327678, 2, 0, 262142, 2, 0, 458751, 2, 0, 458752, 2, 0, 524289, 2, 0, 524287, 2, 0, 393214, 2, 0, 262141, 2, 0, 196605, 2, 0, 131069, 2, 0, 65533, 2, 0, 65534, 2, 0, -2, 2, 0, -1, 2, 0, 65535, 2, 0, 131071, 2, 0, 196607, 2, 0, 262143, 2, 0, 262144, 2, 0, 196606, 2, 0, 131070, 2, 0, 327681, 2, 0, 327682, 2, 0, 393218, 2, 0, 262146, 1, 0, 196610, 1, 0, 262147, 1, 0, 327683, 1, 0, 393219, 2, 0, 393220, 1, 0, 458756, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 1, 0, 458758, 1, 0, 458759, 2, 0, 393223, 2, 0, 327687, 2, 0, 327688, 2, 0, 262153, 2, 0, 262152, 2, 0, 393222, 2, 0, 393221, 1, 0, 458757, 1, 0, 458755, 2, 0, 262145, 2, 0, 196608, 2, 0, 131072, 2, 0, 65536, 2, 0, 131073, 2, 0, 196609, 2, 0, 327684, 1, 0, 327686, 2, 0, 327685, 2, 0, 262149, 2, 0, 262148, 2, 0, 196612, 2, 0, 131076, 2, 0, 131077, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 262151, 2, 0, 262150, 2, 0, 196611, 2, 0, 0, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 1, 0, -65533, 1, 0, -131069, 2, 0, -131070, 1, 0, -131071, 2, 0, -65537, 2, 0, -131072, 2, 0, -196606, 1, 0, -196607, 1, 0, 3, 1, 0, 2, 2, 0, 65537, 2, 0, 131074, 1, 0, 131075, 2, 0, 65539, 1, 0, 65540, 2, 0, 1, 2, 0, 65538, 1, 0, 4, 2, 0, -65532, 2, 0, -65531, 2, 0, -131067, 2, 0, -65530, 2, 0, 6, 2, 0, 7, 2, 0, 65543, 2, 0, 131079, 2, 0, 65541, 2, 0, 5, 2, 0, 65544, 2, 0, 131080, 2, 0, 196616, 2, 0, 393224, 2, 0, 131078, 2, 0, 65542, 2, 0, -131068, 2, 0)
layer_1/name = "trees"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(327687, 3, 0, 131078, 3, 0, -65530, 3, 0, 589828, 3, 0, 393215, 3, 0, 65534, 3, 0, -131072, 3, 0)
script = ExtResource("7_ifnrd")
metadata/_edit_lock_ = true

[node name="Snake" parent="TileMap" node_paths=PackedStringArray("tile_map") instance=ExtResource("7_nn7cm")]
y_sort_enabled = true
position = Vector2(-124, 33)
tile_map = NodePath("..")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="TileMap/Snake"]
position = Vector2(-227, -133)
offset = Vector2(-175, -275)
anchor_mode = 0
position_smoothing_enabled = true
position_smoothing_speed = 0.15
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Coin" parent="TileMap" node_paths=PackedStringArray("tile_map") instance=ExtResource("8_hd4ou")]
z_index = 1
position = Vector2(33, 114)
tile_map = NodePath("..")

[node name="Coin2" parent="TileMap" node_paths=PackedStringArray("tile_map") instance=ExtResource("8_hd4ou")]
z_index = 1
position = Vector2(29, 51)
tile_map = NodePath("..")
grid_location = Vector2(0, 1)

[node name="Coin3" parent="TileMap" node_paths=PackedStringArray("tile_map") instance=ExtResource("8_hd4ou")]
z_index = 1
position = Vector2(29, 80)
tile_map = NodePath("..")
grid_location = Vector2(0, 2)

[node name="Coin4" parent="TileMap" node_paths=PackedStringArray("tile_map") instance=ExtResource("8_hd4ou")]
z_index = 1
position = Vector2(-36, 118)
tile_map = NodePath("..")
grid_location = Vector2(0, 3)

[node name="Coin5" parent="TileMap" node_paths=PackedStringArray("tile_map") instance=ExtResource("8_hd4ou")]
z_index = 1
position = Vector2(-31, 51)
tile_map = NodePath("..")
grid_location = Vector2(0, 4)

[node name="GridLabels" type="Node2D" parent="TileMap"]

[node name="Ref" type="Label" parent="TileMap/GridLabels"]
visible = false
z_index = 3
offset_left = 9.0
offset_top = 3.0
offset_right = 54.0
offset_bottom = 29.0
text = "25, 13"
label_settings = SubResource("LabelSettings_pb8xq")

[connection signal="camera_suggestion" from="TileMap/Snake" to="." method="_on_snake_camera_suggestion"]
[connection signal="game_over_sig" from="TileMap/Snake" to="." method="_on_snake_game_over_sig"]
[connection signal="moved" from="TileMap/Snake" to="." method="_on_snake_moved"]
